<resources>
    <string name="app_name">Thumb2</string>
    <string name="insert_email">כתובת אימייל</string>
    <string name="insert_password">סיסמא</string>
    <string name="hint1"><i>Your hint here</i></string>
    <string name="repeat_password">חזור על הסיסמא</string>
    <string name="insert_first_name">שם פרטי</string>
    <string name="insert_last_name">שם משפחה</string>
    <string name="insert_id_number">מספר תעודת זהות</string>
    <string name="insert_personal_number">מספר אישי</string>
    <string name="insert_release_date">תאריך שחרור</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="unrecognizedBarcode">הברקוד שנסרק אינו תואם לאף משתמש</string>
    <string name="sosButton">אני בסכנה</string>
    <string name="cancel">ביטול</string>
    <string name="tryAgain">נסה שוב</string>



    // String for storing data on local storage
    <string name="preference_file_key">LocalStorageData</string>
    <string name="emergencyContact">emergencyContact</string>
    <string name="sms_send">ההודעה נשלחה</string>
    <string name="sms_not_send">ההודעה לא נשלחה</string>
    <string name="sms_not_send_no_service">שירות שליחת ההודעות אינו זמין</string>
    <string name="sms_not_send_no_radio">radio off</string>
    <string name="sms_receive">ההודעה התקבלה</string>
    <string name="sms_not_receive">ההודעה לא התקבלה</string>
    <string name="cannot_send_sms">"לא היתה אפשרות לשלוח את ההודעה "</string>

</resources>