<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_bg"
    tools:context=".RegistrationActivity">


    <ImageView
        android:id="@+id/armyIdCard_iv"
        android:layout_width="118dp"
        android:layout_height="126dp"
        android:background="@drawable/rounded_image_view"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:srcCompat="@drawable/avatar" />

    <ImageButton
        android:id="@+id/upload_image_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_image_view"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/camera_upload_image_64px"
        app:layout_constraintBottom_toBottomOf="@+id/armyIdCard_iv"
        app:layout_constraintEnd_toEndOf="@+id/armyIdCard_iv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/armyIdCard_iv"
        app:layout_constraintTop_toTopOf="@+id/armyIdCard_iv"
        app:layout_constraintVertical_bias="1.0" />


    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="325dp"
        android:divider="@drawable/empty_tall_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577">

        <EditText
            android:id="@+id/insertFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/first_name_tag"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/insert_first_name"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.268" />

        <EditText
            android:id="@+id/insertLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/first_name_tag"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/insert_last_name"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.367" />

        <EditText
            android:id="@+id/insertPersonalNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/personal_number"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/insert_personal_number"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

        <EditText
            android:id="@+id/insertIdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/id_card"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/insert_id_number"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/next_btn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/roundedbutton"
        android:padding="25dp"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />
</androidx.constraintlayout.widget.ConstraintLayout>