<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_bar"
    tools:context=".DriverDetailsActivity">


    <ScrollView
        android:id="@+id/driverDetails_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-259dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/driverDetails_selfie_iv"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_image_view"
                android:padding="40dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036"
                tools:src="@drawable/avatar" />

            <LinearLayout

                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:divider="@drawable/empty_short_divider"
                android:orientation="vertical"
                android:showDividers="middle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/driverDetails_selfie_iv"
                app:layout_constraintVertical_bias="0.0">


                <TextView
                    android:id="@+id/driverDetails_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="@string/insert_first_name"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.268" />

                <TextView
                    android:id="@+id/driverDetails_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="@string/insert_last_name"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.367" />

                <TextView
                    android:id="@+id/driverDetails_carNumber_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="מספר רכב"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.472" />

                <TextView
                    android:id="@+id/driverDetails_carDescription_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="תיאור הרכב"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.472" />

                <TextView
                    android:id="@+id/driverDetails_phoneNumber_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="טלפון נייד"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.472" />


                <TextView
                    android:id="@+id/driverDetails_personalNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="@string/insert_personal_number"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.576" />

                <TextView
                    android:id="@+id/driverDetails_idNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="@string/insert_id_number"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.472" />


                <TextView
                    android:id="@+id/driverDetails_releaseDate_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:hint="@string/insert_release_date"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.472" />




                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:id="@+id/driverDetails_armyIdCard_iv"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/standrd_image_view"
                        android:padding="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/large_id_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/driverDetails_idCard_iv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/driverDetails_idCard_iv"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="46dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/standrd_image_view"
                        android:padding="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/large_id_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/driverDetails_armyIdCard_iv"
                        app:layout_constraintHorizontal_bias="0.034"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="חוגר / תעודת שחרור"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/driverDetails_armyIdCard_iv"
                        app:layout_constraintStart_toStartOf="@+id/driverDetails_armyIdCard_iv"
                        app:layout_constraintTop_toBottomOf="@id/driverDetails_armyIdCard_iv"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="תעודת זהות"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/driverDetails_idCard_iv"
                        app:layout_constraintStart_toStartOf="@+id/driverDetails_idCard_iv"
                        app:layout_constraintTop_toBottomOf="@id/driverDetails_idCard_iv"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>